src/objects/Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Risk_Assesment__c</fullName>
        <label>Risk Assesment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>formulaCheck__c</fullName>
        <formula>date__c +7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formulaCheck</label>
        <type>DateTime</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <recordTypes>
        <fullName>Four_Wheeler</fullName>
        <active>true</active>
        <label>Four Wheeler</label>
    </recordTypes>
    <recordTypes>
        <fullName>Two_Wheeler</fullName>
        <active>true</active>
        <label>Two Wheeler</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>four_wheeler_need_risk</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name == &quot;Four Wheeler&quot;,
     ISPICKVAL( Status__c , &quot;Completed&quot;),
     ISPICKVAL(  Risk_Assesment__c , &quot;&quot;))</errorConditionFormula>
        <errorMessage>If Status is Completed, then Risk Assessment is necessary</errorMessage>
    </validationRules>
</CustomObject>